coder/coder/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coder-ingress
  namespace: coder
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    cert-manager.io/http01-solver-class: nginx
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - coder.dreammakerhub.website
    secretName: coder-tls-secret
  rules:
  - host: coder.dreammakerhub.website
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: coder
            port:
              number: 80
